# oscillo

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: app.rs  container.rs  context.rs  element.rs  lib.rs  script.rs
core/src/shader/: mod.rs  shader.wgsl
core/src/utils/: background.rs  color.rs  coord.rs  initializer.rs  logger.rs  mod.rs  position.rs  screenshot.rs
examples/: Cargo.toml  basic.rs
